too much of hack to remove the default no file chosen text

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -7,5 +7,7 @@
            <h1 class="intro-quote left" style="color:white;">resume . parse . download</h1> 
 
 
-            <a href="team.html" class="inner-link margin-top-60 col s12 center" data-wipe="json format">upload </a>
+            <input type="file" title=" " id="uploaded_file" class="inner-link margin-top-60 col s12 center" data-wipe="upload json format" />
+
+
         </div>
