--- a/app/assets/stylesheets/inner.css
+++ b/app/assets/stylesheets/inner.css
@@ -29,6 +29,8 @@ button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appe
 button[disabled],html input[disabled]{cursor:default}
 button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}
 input[type=checkbox],input[type=radio]{padding:0}
+input[type=file]{color:transparent;}
+input[type=file]::-webkit-file-upload-button{opacity: 0}
 input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}
 input[type=search]{box-sizing:content-box;-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box}
 input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}
