Adding Resume resources scaffold and frontend json parse

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -7,7 +7,7 @@
            <h1 class="intro-quote left" style="color:white;">resume . parse . download</h1> 
 
 
-            <input type="file" title=" " id="uploaded_file" class="inner-link margin-top-60 col s12 center" data-wipe="upload json format" />
+            <input type="file" title=" " id="uploaded" class="inner-link margin-top-60 col s12 center" data-wipe="upload json format" multiple/>
 
 
         </div>
