--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,9 @@
 <meta name="theme-color" content="#ffffff">
     
     
-    <link rel="stylesheet" type="text/css" href="assets/inner.css">
-    <link rel="stylesheet" type="text/css" href="assets/animate.css">
-    <link rel="stylesheet" type="text/css" href="assets/queries.css">
+    <link rel="stylesheet" type="text/css" href="/assets/inner.css">
+    <link rel="stylesheet" type="text/css" href="/assets/animate.css">
+    <link rel="stylesheet" type="text/css" href="/assets/queries.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,100,300,700" rel="stylesheet" type="text/css">
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -80,7 +80,7 @@ $(document).ready(function() {
                 newLocation = this.href;
                 $('body').fadeOut(1000, newpage);
                 function newpage() {
-                    window.location.href ="index.html";
+                    window.location.href ="/";
                 }
                     });  
     
@@ -90,7 +90,7 @@ $(document).ready(function() {
                 newLocation = this.href;
                 $('body').fadeOut(1000, newpage);
                 function newpage() {
-                    window.location.href ="index.html";
+                    window.location.href ="/";
                 }
                     });        
     
